// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TitleWrapper/> render() should render with a link 1`] = `
<span
  class="container"
>
  <img
    alt="Chat"
    class="container"
    src="test-file-stub"
    style="background-color: rgba(0, 0, 0, 0);"
  />
  <a
    href="https://foo.bar/?baz=BAZ"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Chat
    </span>
  </a>
</span>
`;

exports[`<TitleWrapper/> render() should render without link 1`] = `
<span
  class="container"
>
  <img
    alt="Chat"
    class="container"
    src="test-file-stub"
    style="background-color: rgba(0, 0, 0, 0);"
  />
  <span>
    Chat
  </span>
</span>
`;
